--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>goit-markup-hw-01</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Effective Solutions for Your Business</h1>
+  </body>
 </html>
