--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/stiles.css" />
   </head>
   <body>
-    <h1>Effective Solutions for Your Business</h1>
+    <header>
+      <section class="header-top-line">
+        <div class="container-header-top">
+          <a href="" class="web-logo">WEB</a>
+          <a href="" class="studio-logo">STUDIO</a>
+
+          <a href="" class="menu-nav">Studio</a>
+          <a href="" class="menu-nav">Portfolio</a>
+          <a href="" class="menu-nav">Contacts</a>
+          <a href="maito: info@devstudio.com">info@devstudio.com</a>
+          <a href="tel: +110001111111" class="contacts-top-line"
+            >+11 (000) 111-11-11</a
+          >
+        </div>
+      </section>
+      <h1 class="h1">Effective Solutions for Your Business</h1>
+    </header>
   </body>
 </html>
