--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           <a href="" class="menu-nav">Studio</a>
           <a href="" class="menu-nav">Portfolio</a>
           <a href="" class="menu-nav">Contacts</a>
-          <a href="maito: info@devstudio.com">info@devstudio.com</a>
-          <a href="tel: +110001111111" class="contacts-top-line"
+          <a href="maito: info@devstudio.com" class="contacts-top-line-email"
+            >info@devstudio.com</a
+          >
+          <a href="tel: +110001111111" class="contacts-top-line-tel"
             >+11 (000) 111-11-11</a
           >
         </div>
