--- a/index.html
+++ b/index.html
@@ -4,41 +4,104 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/stiles.css" />
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <section class="header-top-line">
-        <div class="container-header-top">
-          <a href="" class="web-logo">WEB</a>
-          <a href="" class="studio-logo">STUDIO</a>
-
-          <a href="" class="menu-nav">Studio</a>
-          <a href="" class="menu-nav">Portfolio</a>
-          <a href="" class="menu-nav">Contacts</a>
-          <a href="maito: info@devstudio.com" class="contacts-top-line-email"
-            >info@devstudio.com</a
-          >
-          <a href="tel: +110001111111" class="contacts-top-line-tel"
-            >+11 (000) 111-11-11</a
-          >
-        </div>
-      </section>
-      <h1 class="h1">Effective Solutions for Your Business</h1>
+      <nav>
+        <a href="index.html">WEBSTUDIO</a>
+        <ul>
+          <li><a href=""></a>Studio</li>
+          <li><a href=""></a>Portfolio</li>
+          <li><a href=""></a>Contacts</li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
     </header>
+    <main>
+      <h2>Advantages</h2>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/mark.jpg"
+            width="264"
+            height="260"
+            alt="Mark Guerrero"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/tom.jpg" width="264" height="260" alt="Tom Ford" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="./images/camila.jpg"
+            width="264"
+            height="260"
+            alt="Camila Garcia"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/daniel.jpg"
+            width="264"
+            height="260"
+            alt="Daniel Wilson"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="index.html">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
